[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/world.gd" type="Script" id=2]
[ext_resource path="res://maps/park-central.tmx" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="map" type="Node2D" parent="."]

[node name="park-central" parent="map" instance=ExtResource( 3 )]
position = Vector2( 0.13065, 8.36318 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 100.111, 50.6719 )
initial_position_x = 100
initial_position_y = 50

[connection signal="battle" from="player" to="." method="_on_player_battle"]
[connection signal="change_map" from="player" to="." method="_on_player_change_map"]
